--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -96,6 +96,9 @@
      "text": [
       "halaman 1 done\n",
       "halaman 2 done\n",
+      "halaman 3 done\n",
+      "halaman 4 done\n",
+      "halaman 5 done\n",
       "==tanggal 16 done==\n"
      ]
     }
@@ -145,23 +148,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\nRI Targetkan Jadi Anggota OECD 3 Tahun Lagi\\n</td>\n",
+       "      <td>\\nTerminal Mandala di Rangkasbitung Lebak Rusa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\nPerdana Menteri Baru Singapura Rangkap Jabat...</td>\n",
+       "      <td>\\nBegini Nasib Duit Nasabah Bank Jepara Artha ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\nAlfamidi Raup Laba Rp 516 M, Tebar Dividen T...</td>\n",
+       "      <td>\\nPenampakan Terkini Proyek Stasiun Ultimate R...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nApa Itu Program CCS yang Ramai Dipamerin Per...</td>\n",
+       "      <td>\\nPemerintah Diminta Bikin HET Bawang Putih Ag...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>\\nSKK Migas Optimis Sumur Tua Masih Menyimpan ...</td>\n",
+       "      <td>\\nTerungkap Biang Kerok Harga Bawang Putih Mer...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -169,11 +172,11 @@
       ],
       "text/plain": [
        "                                               judul\n",
-       "0    \\nRI Targetkan Jadi Anggota OECD 3 Tahun Lagi\\n\n",
-       "1  \\nPerdana Menteri Baru Singapura Rangkap Jabat...\n",
-       "2  \\nAlfamidi Raup Laba Rp 516 M, Tebar Dividen T...\n",
-       "3  \\nApa Itu Program CCS yang Ramai Dipamerin Per...\n",
-       "4  \\nSKK Migas Optimis Sumur Tua Masih Menyimpan ..."
+       "0  \\nTerminal Mandala di Rangkasbitung Lebak Rusa...\n",
+       "1  \\nBegini Nasib Duit Nasabah Bank Jepara Artha ...\n",
+       "2  \\nPenampakan Terkini Proyek Stasiun Ultimate R...\n",
+       "3  \\nPemerintah Diminta Bikin HET Bawang Putih Ag...\n",
+       "4  \\nTerungkap Biang Kerok Harga Bawang Putih Mer..."
       ]
      },
      "execution_count": 4,
@@ -186,297 +189,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8e2f1e7b-9320-4acb-ba99-7e37698fec1f",
-   "metadata": {},
-   "source": [
-    "# Labelling (masih random) cari cara menggunakan API gpt"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6f2b1509-9c24-4967-a08b-e5908041b992",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = ['positif', 'negatif', 'netral']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b531118f-b5b5-44a9-b0bd-fd8504384a21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, baris in data.iterrows():\n",
-    "    data.at[index, 'label'] = random.choice(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "54aebc88-1b45-4ef7-a8f2-5b9d3189e1e4",
+   "execution_count": 19,
+   "id": "cc816d70-6af7-4d7c-8e6e-f25f2d9e0b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>judul</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\\nRI Targetkan Jadi Anggota OECD 3 Tahun Lagi\\n</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\\nPerdana Menteri Baru Singapura Rangkap Jabat...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\\nAlfamidi Raup Laba Rp 516 M, Tebar Dividen T...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\\nApa Itu Program CCS yang Ramai Dipamerin Per...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\\nSKK Migas Optimis Sumur Tua Masih Menyimpan ...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>\\nBUMN Buka Lowongan Kerja Gede-gedean buat Di...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>\\nArsip Pabrik Semen Pertama RI Dapat Pengakua...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>\\nDiapresiasi KKP, Ini Kronologi TNI AL Gagalk...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>\\nBea Cukai Tahan Barang Ilegal Rp 1,39 Triliu...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>\\nPendaftaran Sekolah Kedinasan Dimulai, Menpa...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>\\nTraktor Nusantara Pamer Solusi Alat Berat Te...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>\\nTesla Mau PHK Karyawan Lagi!\\n</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>\\nProduksi Minyak RI Merosot, ESDM Keliling Ca...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>\\nIndonesia Berpotensi Menjadi CCS Hub\\n</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>\\nAnak Tunggal Konglomerat Ini Tolak Warisan R...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>\\nCanggih! Drone Ini Bisa Deteksi Emisi Karbon...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>\\nJumlah Orang Kaya di Shenzen China Melonjak ...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>\\nBRI Salurkan Bantuan ke Warga Terdampak Erup...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>\\nIni Daerah Paling Banyak Tersimpan 'Harta Ka...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>\\nRekor Baru, Harga Emas Hari Ini Menggila!\\n</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>\\nEks Pejabatnya Tersangkut Kasus Korupsi Impo...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>\\nDolar AS Keok Lawan Mata Uang Asia, Rupiah G...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>\\nPagi yang Cerah Lihat IHSG Dibuka Naik Nyari...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>\\nUpaya Kurangi Karbon, Pertamina Kerja Sama d...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>\\nPutin Temui Xi Jinping Bahas Nuklir-AI, AS W...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>\\nPertamina Buka Lowongan Kerja, Lulusan SMA B...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>\\nMenteri Trenggono Resmikan Media Center KKP,...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>\\n'Lebaran Migas' Masuki Hari Ketiga, Bahas Po...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>\\nBaru! Aktifkan Gojek Business Profile untuk ...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>\\nRI Impor 2.000 Ton Emas dari Australia-Singa...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>\\nSri Mulyani Lapor ke Jokowi Soal Bea Cukai h...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>\\nFakta-fakta Neraca Dagang RI Surplus 48 Bula...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>\\nPotensi Bisnis Piringan Hitam yang Bangkit d...</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>\\nKomentar Mengejutkan Yongki Komaladi soal Tu...</td>\n",
-       "      <td>negatif</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>\\nDiam-diam RI Punya 20 'Gudang' Karbon Emisi!\\n</td>\n",
-       "      <td>netral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>\\nSri Mulyani Susun APBN Pertama Prabowo-Gibra...</td>\n",
-       "      <td>positif</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                judul    label\n",
-       "0     \\nRI Targetkan Jadi Anggota OECD 3 Tahun Lagi\\n  negatif\n",
-       "1   \\nPerdana Menteri Baru Singapura Rangkap Jabat...  negatif\n",
-       "2   \\nAlfamidi Raup Laba Rp 516 M, Tebar Dividen T...  negatif\n",
-       "3   \\nApa Itu Program CCS yang Ramai Dipamerin Per...   netral\n",
-       "4   \\nSKK Migas Optimis Sumur Tua Masih Menyimpan ...  negatif\n",
-       "5   \\nBUMN Buka Lowongan Kerja Gede-gedean buat Di...  positif\n",
-       "6   \\nArsip Pabrik Semen Pertama RI Dapat Pengakua...  positif\n",
-       "7   \\nDiapresiasi KKP, Ini Kronologi TNI AL Gagalk...   netral\n",
-       "8   \\nBea Cukai Tahan Barang Ilegal Rp 1,39 Triliu...   netral\n",
-       "9   \\nPendaftaran Sekolah Kedinasan Dimulai, Menpa...  negatif\n",
-       "10  \\nTraktor Nusantara Pamer Solusi Alat Berat Te...  negatif\n",
-       "11                   \\nTesla Mau PHK Karyawan Lagi!\\n  negatif\n",
-       "12  \\nProduksi Minyak RI Merosot, ESDM Keliling Ca...  negatif\n",
-       "13           \\nIndonesia Berpotensi Menjadi CCS Hub\\n   netral\n",
-       "14  \\nAnak Tunggal Konglomerat Ini Tolak Warisan R...  positif\n",
-       "15  \\nCanggih! Drone Ini Bisa Deteksi Emisi Karbon...   netral\n",
-       "16  \\nJumlah Orang Kaya di Shenzen China Melonjak ...   netral\n",
-       "17  \\nBRI Salurkan Bantuan ke Warga Terdampak Erup...  negatif\n",
-       "18  \\nIni Daerah Paling Banyak Tersimpan 'Harta Ka...  positif\n",
-       "19      \\nRekor Baru, Harga Emas Hari Ini Menggila!\\n  positif\n",
-       "20  \\nEks Pejabatnya Tersangkut Kasus Korupsi Impo...   netral\n",
-       "21  \\nDolar AS Keok Lawan Mata Uang Asia, Rupiah G...  positif\n",
-       "22  \\nPagi yang Cerah Lihat IHSG Dibuka Naik Nyari...  positif\n",
-       "23  \\nUpaya Kurangi Karbon, Pertamina Kerja Sama d...  negatif\n",
-       "24  \\nPutin Temui Xi Jinping Bahas Nuklir-AI, AS W...   netral\n",
-       "25  \\nPertamina Buka Lowongan Kerja, Lulusan SMA B...   netral\n",
-       "26  \\nMenteri Trenggono Resmikan Media Center KKP,...   netral\n",
-       "27  \\n'Lebaran Migas' Masuki Hari Ketiga, Bahas Po...  negatif\n",
-       "28  \\nBaru! Aktifkan Gojek Business Profile untuk ...   netral\n",
-       "29  \\nRI Impor 2.000 Ton Emas dari Australia-Singa...   netral\n",
-       "30  \\nSri Mulyani Lapor ke Jokowi Soal Bea Cukai h...  negatif\n",
-       "31  \\nFakta-fakta Neraca Dagang RI Surplus 48 Bula...  negatif\n",
-       "32  \\nPotensi Bisnis Piringan Hitam yang Bangkit d...   netral\n",
-       "33  \\nKomentar Mengejutkan Yongki Komaladi soal Tu...  negatif\n",
-       "34   \\nDiam-diam RI Punya 20 'Gudang' Karbon Emisi!\\n   netral\n",
-       "35  \\nSri Mulyani Susun APBN Pertama Prabowo-Gibra...  positif"
+       "'\\nBegini Nasib Duit Nasabah Bank Jepara Artha Usai Izin Dicabut OJK\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.judul[1]"
    ]
   },
   {
@@ -489,12 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "63e4c28d-7c27-4073-88ff-fb607c01834c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# disini"
+    "data.to_csv('data.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
