--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -97,9 +97,10 @@
       "halaman 1 done\n",
       "halaman 2 done\n",
       "halaman 3 done\n",
-      "halaman 4 done\n",
-      "halaman 5 done\n",
-      "==tanggal 16 done==\n"
+      "==tanggal 1 done==\n",
+      "halaman 1 done\n",
+      "halaman 2 done\n",
+      "halaman 3 done\n"
      ]
     }
    ],
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "01e7c4a3-f30d-473e-a7ed-057d36f2ac32",
    "metadata": {},
    "outputs": [
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "cc816d70-6af7-4d7c-8e6e-f25f2d9e0b68",
    "metadata": {},
    "outputs": [
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "63e4c28d-7c27-4073-88ff-fb607c01834c",
    "metadata": {},
    "outputs": [],
@@ -244,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
