--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "58559d0b-5d4a-466b-a198-71bbe8450fbe",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "89a0b3ba-c5e8-445a-9b89-ab225af87ba4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "def scraping(tgl_akhir, bulan, tahun):\n",
     "    judul = []\n",
     "    # iterasi dari tanggal 1 pada bulan yang ditentukan\n",
-    "    tgl = 16 \n",
+    "    tgl = 2 \n",
     "    # iterasi sampai dengan tanggal terahir yang ditentukan\n",
     "    while tgl <= tgl_akhir: \n",
     "        # pada tanggal tertentu iterasi dumulai dari halaman 1\n",
@@ -51,11 +51,14 @@
     "        # selama list_berita punya lenght ambil list_berita dari page tertentu\n",
     "        while True:\n",
     "            # membuat http request\n",
-    "            response = requests.get(f'https://finance.detik.com/indeks/{hal}?date={bulan}/{tgl}/{tahun}').text\n",
+    "            response = requests.get(f'https://finance.detik.com/indeks/{hal}?date={bulan:02d}/{tgl:02d}/{tahun}')\n",
+    "            print(response.status_code)\n",
+    "            response = response.text\n",
     "            # mem-parsing respon HTML menggunakan parser lxml.\n",
     "            parser = sp(response,'lxml')\n",
     "            # ambil list berita\n",
-    "            list_berita = parser.select('div.grid-row.list-content')[0].find_all('article')            \n",
+    "            list_berita = parser.select('div.grid-row.list-content')[0].find_all('article')\n",
+    "            print(len(list_berita))\n",
     "            # cek apakah ada list berita pada page tertentu\n",
     "            if not list_berita:\n",
     "                break\n",
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1ed6cf35-4baf-49e1-8a66-fd4433e38896",
    "metadata": {},
    "outputs": [
@@ -94,18 +97,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "200\n",
+      "20\n",
       "halaman 1 done\n",
+      "200\n",
+      "20\n",
       "halaman 2 done\n",
+      "200\n",
+      "20\n",
       "halaman 3 done\n",
-      "==tanggal 1 done==\n",
-      "halaman 1 done\n",
-      "halaman 2 done\n",
-      "halaman 3 done\n"
+      "200\n",
+      "20\n",
+      "halaman 4 done\n"
      ]
     }
    ],
    "source": [
-    "data = scraping(16, 5, 2024)"
+    "data = scraping(2, 5, 2024)"
    ]
   },
   {
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "01e7c4a3-f30d-473e-a7ed-057d36f2ac32",
    "metadata": {},
    "outputs": [
@@ -147,40 +155,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\\nTerminal Mandala di Rangkasbitung Lebak Rusa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\\nBegini Nasib Duit Nasabah Bank Jepara Artha ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\\nPenampakan Terkini Proyek Stasiun Ultimate R...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\\nPemerintah Diminta Bikin HET Bawang Putih Ag...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\\nTerungkap Biang Kerok Harga Bawang Putih Mer...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               judul\n",
-       "0  \\nTerminal Mandala di Rangkasbitung Lebak Rusa...\n",
-       "1  \\nBegini Nasib Duit Nasabah Bank Jepara Artha ...\n",
-       "2  \\nPenampakan Terkini Proyek Stasiun Ultimate R...\n",
-       "3  \\nPemerintah Diminta Bikin HET Bawang Putih Ag...\n",
-       "4  \\nTerungkap Biang Kerok Harga Bawang Putih Mer..."
+       "Empty DataFrame\n",
+       "Columns: [judul]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
