--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "1ed6cf35-4baf-49e1-8a66-fd4433e38896",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,16 @@
       "halaman 3 done\n",
       "200\n",
       "20\n",
-      "halaman 4 done\n"
+      "halaman 4 done\n",
+      "200\n",
+      "20\n",
+      "halaman 5 done\n",
+      "200\n",
+      "10\n",
+      "halaman 6 done\n",
+      "200\n",
+      "0\n",
+      "==tanggal 2 done==\n"
      ]
     }
    ],
