--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -10,15 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "id": "58559d0b-5d4a-466b-a198-71bbe8450fbe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup as sp\n",
-    "import random"
+    "from bs4 import BeautifulSoup as sp"
    ]
   },
   {
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "89a0b3ba-c5e8-445a-9b89-ab225af87ba4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +42,7 @@
     "def scraping(tgl_akhir, bulan, tahun):\n",
     "    judul = []\n",
     "    # iterasi dari tanggal 1 pada bulan yang ditentukan\n",
-    "    tgl = 2 \n",
+    "    tgl = 1 \n",
     "    # iterasi sampai dengan tanggal terahir yang ditentukan\n",
     "    while tgl <= tgl_akhir: \n",
     "        # pada tanggal tertentu iterasi dumulai dari halaman 1\n",
@@ -51,14 +50,12 @@
     "        # selama list_berita punya lenght ambil list_berita dari page tertentu\n",
     "        while True:\n",
     "            # membuat http request\n",
-    "            response = requests.get(f'https://finance.detik.com/indeks/{hal}?date={bulan:02d}/{tgl:02d}/{tahun}')\n",
-    "            print(response.status_code)\n",
-    "            response = response.text\n",
+    "            response = requests.get(f'https://finance.detik.com/indeks/{hal}?date={bulan:02d}/{tgl:02d}/{tahun}').text\n",
     "            # mem-parsing respon HTML menggunakan parser lxml.\n",
     "            parser = sp(response,'lxml')\n",
     "            # ambil list berita\n",
     "            list_berita = parser.select('div.grid-row.list-content')[0].find_all('article')\n",
-    "            print(len(list_berita))\n",
+    "            print(f'{len(list_berita)} berita')\n",
     "            # cek apakah ada list berita pada page tertentu\n",
     "            if not list_berita:\n",
     "                break\n",
@@ -89,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "1ed6cf35-4baf-49e1-8a66-fd4433e38896",
    "metadata": {},
    "outputs": [
@@ -97,32 +94,351 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n",
-      "20\n",
+      "20 berita\n",
       "halaman 1 done\n",
-      "200\n",
-      "20\n",
+      "20 berita\n",
       "halaman 2 done\n",
-      "200\n",
-      "20\n",
+      "20 berita\n",
       "halaman 3 done\n",
-      "200\n",
-      "20\n",
+      "20 berita\n",
       "halaman 4 done\n",
-      "200\n",
-      "20\n",
+      "20 berita\n",
       "halaman 5 done\n",
-      "200\n",
-      "10\n",
+      "7 berita\n",
       "halaman 6 done\n",
-      "200\n",
-      "0\n",
-      "==tanggal 2 done==\n"
+      "0 berita\n",
+      "==tanggal 1 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "13 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 2 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "10 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 3 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "5 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 4 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "20 berita\n",
+      "halaman 6 done\n",
+      "15 berita\n",
+      "halaman 7 done\n",
+      "0 berita\n",
+      "==tanggal 5 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "6 berita\n",
+      "halaman 4 done\n",
+      "0 berita\n",
+      "==tanggal 6 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "5 berita\n",
+      "halaman 4 done\n",
+      "0 berita\n",
+      "==tanggal 7 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "18 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 8 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "11 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 9 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "19 berita\n",
+      "halaman 2 done\n",
+      "0 berita\n",
+      "==tanggal 10 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "3 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 11 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "4 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 12 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 13 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "17 berita\n",
+      "halaman 2 done\n",
+      "0 berita\n",
+      "==tanggal 14 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "19 berita\n",
+      "halaman 2 done\n",
+      "0 berita\n",
+      "==tanggal 15 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "2 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 16 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "14 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 17 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "8 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 18 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "4 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 19 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "1 berita\n",
+      "halaman 4 done\n",
+      "0 berita\n",
+      "==tanggal 20 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "11 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 21 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "3 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 22 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "13 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 23 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "10 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 24 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "16 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 25 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "19 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 26 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "1 berita\n",
+      "halaman 4 done\n",
+      "0 berita\n",
+      "==tanggal 27 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "17 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 28 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "20 berita\n",
+      "halaman 6 done\n",
+      "15 berita\n",
+      "halaman 7 done\n",
+      "0 berita\n",
+      "==tanggal 29 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "20 berita\n",
+      "halaman 6 done\n",
+      "5 berita\n",
+      "halaman 7 done\n",
+      "0 berita\n",
+      "==tanggal 30 done==\n"
      ]
     }
    ],
    "source": [
-    "data = scraping(2, 5, 2024)"
+    "data = scraping(30, 4, 2024)"
    ]
   },
   {
@@ -135,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "id": "01e7c4a3-f30d-473e-a7ed-057d36f2ac32",
    "metadata": {},
    "outputs": [
@@ -164,38 +480,61 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2506</th>\n",
+       "      <td>\\nIsi Pertemuan PM Singapura dengan Jokowi dan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2507</th>\n",
+       "      <td>\\nViral Bea Masuk Barang Tinggi, Komisi XI DPR...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2508</th>\n",
+       "      <td>\\nBahlil Sebut Sukanto Tanoto Investasi di IKN...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2509</th>\n",
+       "      <td>\\nAkhir Kehebohan Alat Belajar SLB yang Viral ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2510</th>\n",
+       "      <td>\\nRencana Freeport Nambang di Papua sampai 206...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [judul]\n",
-       "Index: []"
+       "                                                  judul\n",
+       "2506  \\nIsi Pertemuan PM Singapura dengan Jokowi dan...\n",
+       "2507  \\nViral Bea Masuk Barang Tinggi, Komisi XI DPR...\n",
+       "2508  \\nBahlil Sebut Sukanto Tanoto Investasi di IKN...\n",
+       "2509  \\nAkhir Kehebohan Alat Belajar SLB yang Viral ...\n",
+       "2510  \\nRencana Freeport Nambang di Papua sampai 206..."
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "cc816d70-6af7-4d7c-8e6e-f25f2d9e0b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nBegini Nasib Duit Nasabah Bank Jepara Artha Usai Izin Dicabut OJK\\n'"
+       "'\\nAntisipasi Mudik Lebaran, Pertamina Siapkan SPBU-Agen LPG Tambahan\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,13 +553,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "63e4c28d-7c27-4073-88ff-fb607c01834c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('data.csv', index=False, encoding='utf-8')"
+    "data.to_csv('data_4_2024.csv', index=False, encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb858da-c3dd-4a02-be2e-de2b35bc2188",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -239,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
